tests/ui/mismatched_types/method-help-unsatisfied-bound.stderr
error[E0277]: `Foo` doesn't implement `Debug`
  --> $DIR/method-help-unsatisfied-bound.rs:5:7
   |
LL |     a.unwrap();
   |       ^^^^^^ the trait `Debug` is not implemented for `Foo`
   |
   = note: add `#[derive(Debug)]` to `Foo` or manually `impl Debug for Foo`
note: required by a bound in `Result::<T, E>::unwrap`
  --> $SRC_DIR/core/src/result.rs:LL:COL
help: consider annotating `Foo` with `#[derive(Debug)]`
   |
LL + #[derive(Debug)]
LL | struct Foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
